plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

allprojects {
	repositories {
		mavenCentral()
	}
}


subprojects {
	group 'com.tagstory'
	version '0.0.1-SNAPSHOT'
	sourceCompatibility = '17'

	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	/* 하위 모듈에서 공통 사용 */
	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-security'
		implementation 'org.springframework.boot:spring-boot-starter-data-redis'
		implementation 'com.github.ulisesbocchio:jasypt-spring-boot:3.0.5'
		implementation 'org.apache.commons:commons-lang3'
		implementation 'com.auth0:java-jwt:4.2.1'
		implementation 'io.sentry:sentry-spring-boot-starter:6.33.1'
		implementation 'io.sentry:sentry-logback:6.33.1'

		compileOnly 'org.projectlombok:lombok'

		annotationProcessor 'org.projectlombok:lombok'
		annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.springframework.security:spring-security-test'

	}

	test {
		useJUnitPlatform()
	}
}